Added step 1 cache module

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,4 +19,5 @@ add_library(utilities modules/lib/utilities.cpp)
 target_include_directories(utilities PUBLIC include)
 
 add_subdirectory(modules/HelloWorld/step1_helloworld)
+add_subdirectory(modules/HelloWorld/step1_cache)
 add_subdirectory(modules/HelloWorld/final_cache)
