More steps of the cache exercise.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,4 +22,6 @@ add_subdirectory(modules/HelloWorld/step1_helloworld)
 add_subdirectory(modules/HelloWorld/step1_cache)
 add_subdirectory(modules/HelloWorld/step2_cache)
 add_subdirectory(modules/HelloWorld/step3_cache)
+add_subdirectory(modules/HelloWorld/step4_cache)
+add_subdirectory(modules/HelloWorld/step5_cache)
 add_subdirectory(modules/HelloWorld/final_cache)
