Added last for policy based design.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,4 +24,5 @@ add_subdirectory(modules/HelloWorld/step2_cache)
 add_subdirectory(modules/HelloWorld/step3_cache)
 add_subdirectory(modules/HelloWorld/step4_cache)
 add_subdirectory(modules/HelloWorld/step5_cache)
+add_subdirectory(modules/HelloWorld/step6_cache)
 add_subdirectory(modules/HelloWorld/final_cache)
