Add template exercises.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,9 +20,12 @@ target_include_directories(utilities PUBLIC include)
 
 add_subdirectory(modules/HelloWorld/step1_helloworld)
 add_subdirectory(modules/HelloWorld/step1_cache)
+add_subdirectory(modules/HelloWorld/class_new)
 add_subdirectory(modules/HelloWorld/step2_cache)
 add_subdirectory(modules/HelloWorld/step3_cache)
 add_subdirectory(modules/HelloWorld/step4_cache)
 add_subdirectory(modules/HelloWorld/step5_cache)
 add_subdirectory(modules/HelloWorld/step6_cache)
 add_subdirectory(modules/HelloWorld/final_cache)
+add_subdirectory(modules/HelloWorld/first_templates)
+add_subdirectory(modules/HelloWorld/specialisation_templates)
